--- a/public/stat120/Day21.Rmd
+++ b/public/stat120/Day21.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Inference for multiple proportions"
+title: "Inference for two means"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -94,7 +94,7 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Inference for multiple proportions]
+# .fancy[Inference for two means]
 
 ### .fancy[Stat 120]
 
@@ -104,451 +104,297 @@ class: title-slide, middle
 
 class: middle
 
-# Tests for One Categorical Variable
-
-.bq.font80[**Goodness-of-fit test**
-
-- Test a claim about the distribution of one categorical variable
-- E.g. are 6 M&M colors equally likely?
-- E.g. is Biden's approval rating 50%?
-]
-
-<br>
-
-
----
-
-# Tests for One Categorical Variable
-
-.bql.font80[Seen single proportion tests before
-  - Example : Test if the proportion of Reese’s Pieces that are orange is different from 1/3.
-
-\begin{aligned}
-H_0 : p = 1/3\\
-H_a : p \neq 1/3
-\end{aligned}
-]
-
-<br>
-
-.bq.font80[What if we want to test proportions for several categories at once?
-
-  - Example: Are the three colors (orange, yellow, brown) of Reese’s Pieces equally likely?
-
-$H_0$ specifies a proportion,  $p_i$ , for each category.
-]
-
----
-
-class: middle
-
-# Test for one categorical variable
-
-
-.bqt[
-The proportions do not have to be the same. e.g: Grade distribution
-
-\begin{align}
-H_0 &:p_{A}=0.2, \quad p_{B}=0.3, \quad p_{C}=0.3, \quad p_{D}=0.1, \quad p_{F}=0.1\\
-H_a &:\text{ at least one proportion different}
-\end{align}
-]
-
----
-
-# Rock-Paper-Scissors
-
-.hljs[
-ROCK | PAPER | SCISSORS | TOTAL
-----| ---- | ------|-------
-36 | 12 | 37 | 85 
-]
-
-.out-t[How would we test whether all of these categories are equally likely?]
-
---
+# The SE for means
 
 .bql.font80[
-Conduct a hypothesis test
-  - State Hypothesis
-  - Calculate a test statistic, based on your sample data
-  - Create a distribution of this statistic, as it would be observed if the null hypothesis were true
-  - Measure how extreme your test statistic is, as compared to the distribution generated under null
+- The standard error for $\bar{x}$ is
+$$S E_{\bar{x}}=\frac{\sigma}{\sqrt{n}}$$
+where $\sigma$ is the population SD of your response
+
+- The standard error for $\bar{x}_{1}-\bar{x}_{2}$ is
+$$S E_{\bar{x}_{1}-\bar{x}_{2}}=\sqrt{\frac{\sigma_{1}^{2}}{n_{1}}+\frac{\sigma_{2}^{2}}{n_{2}}}$$
+
+.b[
+But we usually do not know $\sigma$ !
+
+  - Estimate $\sigma$ with the sample SD $s$
+
 ]
+]
+
 
 ---
 
 class: middle
 
-# Test Statistic
+# Central Limit Theorem for means: One sample
 
-.hljs[Why can’t we use the familiar formula to get the test statistic?
+.bql-list[
 
-$$\frac{\text { sample statistic - null value }}{\text { SE }}$$
+The sampling distribution for a sample mean is approximately $N\left(\mu, S E_{\bar{x}}\right)$]
+
+<br>
+
+.bql[
+When is this approximately "good"?
+
+- if $X \sim N(\mu, \sigma)$ then $\bar{X} \sim N(\mu, \sigma / \sqrt{n})$
+
+- if $X \nsim N(\mu, \sigma)$ then $\bar{X} \sim N(\mu, \sigma / \sqrt{n})$ if $n \geqslant 30$
 ]
-
-- More than one sample statistic
-- More than one null value
-
-
-.out-t[We need something a bit more complicated ...]
 
 
 ---
 
-# Observed Counts
+class: middle
+
+# Central Limit Theorem for means: Two independent samples:
+
+.bql-list[
+The sampling distribution for a difference of two independent sample means is approximately $N\left(\mu_{1}-\mu_{2}, S E_{\bar{x}_{1}-\bar{x}_{2}}\right)$
+]
+
+<br>
+
+.bql[
+When is this approximately "good"?
+- need both $n_{1}$ and $n_{2}$ samples sizes big enough for the one-sample condition
+]
 
 
-.hljs[The observed counts are the actual counts observed in the study
+---
 
-ROCK | PAPER | SCISSORS | TOTAL
-----| ---- | ------|-------
-36 | 12 | 37 | 85 
+class: middle
+
+# Academic Performance Index (API) 
+
+.bql-list[
+Academic Performance Index (API) is a number reflecting a school’s performance on a statewide standardized test
+  - simple random sample of $n=200$ schools
+  - variable `growth` measures the growth in API from 1999 to 2000 (API 2000 - API 1999).
+]
+
+```{r}
+# read data
+api <- read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/API.csv")
+```
+
+---
+
+class: middle
+
+# Academic Performance Index (API) 
+
+.code100[
+```{r, collapse=TRUE}
+api$wealth <- ifelse(api$meals > 50, "low","high")
+table(api$wealth)
+```
+]
+
+
+.code100[
+```{r, collapse=TRUE}
+library(dplyr)
+api %>% 
+  group_by(wealth) %>% 
+  summarize(mean(growth), sd(growth))
+```
+]
+
+---
+
+# API
+
+```{r, fig.width=5, fig.height=4, out.width="50%", fig.align='center'}
+ggplot(api, aes(x = growth, y = wealth)) + geom_boxplot() + 
+  labs(y ="API growth (2000 - 1999)") 
+```
+
+
+---
+
+## Hypothesis Test: Can we use t-inference methods to compare mean growths?
+
+.bql.font80[
+- Both samples sizes (98 and 102) can be deemed large 
+- No severe skewness (but two extreme outliers)
+]
+
+.bqt.font80[
+- Estimated Standard Error : $SD_{\bar{x}_h - \bar{x}_l} = \sqrt{\dfrac{28.75380^2}{102} + \dfrac{29.95048^2}{98}} = 4.1544$
+
+- Test statistics: $t = \dfrac{(25.24510 - 38.82653) - 0}{4.154404} = -3.2692$
+]
+
+..hljs[The observed mean difference is 3.3 SEs below the hypothesized mean difference of 0]
+
+---
+
+# Two-sample t-test
+
+```{r, highlight.output = c(5)}
+t.test(growth ~ wealth, data = api)
+```
+
+.font80[
+> The p-value is 0.001273. If there is no difference between mean growth in the two populations,
+then there is just a 0.13% chance of seeing a sample mean difference that is 3.27 standard errors or more
+away from 0.
+]
+
+---
+
+# Outliers
+
+```{r, collapse=TRUE}
+which(api$growth > 120 )
+```
+
+
+```{r, collapse=TRUE}
+library(dplyr)
+api %>% slice(74,119)  
+```
+
+---
+
+# Remove Outliers
+
+```{r, highlight.output = c(5)}
+t.test(growth ~ wealth, data = api, subset = -c(74,119))
+```
+
+..hljs[How does removing outliers influence `t-test` stat and p-value?]
+
+
+---
+
+# Confidence Interval
+
+.pull-left[
+.bql-list.font90[
+
+.hljs[
+.bolder[95% Confidence Interval from the output:]
+- Without Outliers: (-23.57, -8.96)
+- With Outliers: (-21.77, -5.39)
+]
+]
+]
+
+.pull-right[
+.bql.font80[
+.bolder[Removing Outliers:]
+- the difference in means shifted further away from 0
+- CI shifted further from a difference of 0
+- decrease the SE of our sample difference
+]
 ]
 
 --
 
-.bq.font80[
-- The expected counts are the expected counts if the null hypothesis were true
-- For each cell, the expected count is the sample size $n$ times the null proportion, $p_o$
-]
+<br>
 
-.hljs[
-&nbsp; | ROCK | PAPER | SCISSORS | TOTAL
-----| ----| ---- | ------|-------
-Observed | 36 | 12 | 37 | 85 
-Expected | 28.33 | 28.33 | 28.33 | 85 
+.bql.font90[
+.bold[Interpretation:] We are 95% confident that the mean API growth between 1999 and 2000 for all low wealth
+schools is anywhere from 8.96 points to 23.57 points higher than the mean API growth for all high wealth
+schools in California.
 ]
-
 
 ---
 
-class: middle
+## Paired Data
 
-# Chi-Square Statistic
-
-.bq.font80[
-- A test statistic is one number, computed from the data, which we can use to assess the null hypothesis
-- The chi-square statistic is a test statistic for categorical variables:
+.bql.font90[Data are paired if the data being compared consists of paired data values. Common paired data examples:
+  - Two measurements on each case
+  - natural pairs (twins, spouses, etc)
 ]
+
+--
 
 <br>
 
-.hljs[
-
-\begin{aligned}
-\chi^2 = \sum{\frac{(observed - expected)^2}{expected}} = \sum{\frac{(O - E)^2}{E}}
-\end{aligned}
-
+.bq.font80[Use paired data to reduce natural variation in the response when comparing the two groups/treatments
+  - comparing group 1 and 2 responses among similar individuals 
+  - reduces the effects of confounding variables
+  - reduces the SE for the mean difference!
 ]
 
 ---
 
 class: middle
 
-#  Rock-Paper-Scissors
+# Analyzing paired data
 
-.hljs[
-&nbsp; | ROCK | PAPER | SCISSORS | TOTAL
-----| ----| ---- | ------|-------
-Observed | 36 | 12 | 37 | 85 
-Expected | 28.33 | 28.33 | 28.33 | 85 
+.bql.font80[
+- Look at the difference between responses for each unit (pair)
+$$d_{i} = x_{1,i} - x_{2,i}$$
 
+- Analyze the .bold[mean of these differences] rather than the average difference between two groups
+$$\textrm{sample mean difference: } \bar{d}$$
+$$\textrm{sample SD of difference: } s_d$$
+$$\textrm{population mean difference: } \mu_d$$
 
-\begin{aligned}
-\chi^2 &= \frac{(36-28.33)^2}{28.33} + \cdots + \cdots\\
-&\approx 2.076 + \cdots + \cdots
-\end{aligned}
+- Use .bold[one sample] inference methods for these differences
 ]
 
 ---
 
-class: middle
+# Tuition example
 
-# What next?
-
-.bql[
-We have a test statistic.  What else do we need to perform the hypothesis test?
-- A distribution of the test statistic assuming $H_0$ is true
+.bql.font90[How much higher is non-resident tuition, on average, compared to resident tuition? Use the `Tuition2006.csv` lab manual data
+  - the variable `Diff` computes the difference `Res` - `NonRes`
 ]
-
-<br>
-
-.bql[How do we get this? Two options:
-1. Simulation
-2. Theoretical Distribution
-]
-
----
-
-# Simulation
-
-.bqt.font90[
-1. Take 3 scraps of paper and label them Rock, Paper, Scissors. Fold or crumple them so they are indistinguishable. Choose one at random and record the result.
-
-2. Repeat a number of times to match the original sample size and get a table of observed counts. 
-
-3. Calculate the $\chi^{2}$-statistic.
-
-4. Repeat this many times to get a randomization distribution of many $\chi^{2}$-statistics.
-
-5. How extreme is the actual test statistic in this randomization distribution?
-]
-
----
-
-class: middle
-
-# [Statkey:](https://www.lock5stat.com/StatKey/index.html) Chi-Square Distribution
-
-<center>
-<img src="images/chisimulation.png" width="85%" height="65%"><br>
-</center>
-
-
----
-
-class: middle
-
-# Chi-Square Distribution
-
-.bql[
-If each of the expected counts are at least 5, AND if the null hypothesis is true, then the $\chi^2$ statistic follows a $\chi^2$ distribution, with degrees of freedom equal to
-
-$$df = \text{number of categories} -1$$
-]
-
-.hljs[
-Rock-Paper-Scissors:
-
+    
+```{r, collapse=TRUE, highlight.output = 6}
+tuition <- read.csv("http://math.carleton.edu/Stats215/RLabManual/Tuition2006.csv")
+str(tuition)
 ```
-df = 3 - 1 = 2 # degrees of freedom 
+
+
+---
+
+## Tuition example: Histogram and QQ-plot
+
+
+
+.pull-left[
+```{r}
+ggplot(tuition, aes(x = Diff)) +
+  geom_histogram(fill = "steelblue", bins = 5,
+                 col = "lightblue") +
+  labs(title = "Histogram")
 ```
 ]
----
-
-class: middle
-
-# Chi-Square Distribution
-
-<center>
-<img src="images/chisquare.png" width="65%" height="65%"><br>
-</center>
-
-
----
-
-class: middle
-
-# [Statkey:](https://www.lock5stat.com/StatKey/index.html) p-value using Chi-square distribution
-
-<center>
-<img src="images/chilock.png" width="75%" height="75%"><br>
-</center>
-
----
-
-class: middle
-
-# Goodness of Fit
-
-.bq[
-- A $\chi^2$ test for goodness of fit test determines whether the distribution of a categorical variable is the same as some null hypothesized distribution
-
-- The null hypothesized proportions for each category do not have to be the same
-]
-
----
-
-# Chi-Square Test for Goodness of Fit
-
-.bqt.font90[
-- State null hypothesized proportions for each category, pi.  Alternative is that at least one of the proportions is different than specified in the null.
-
-- Calculate the expected counts for each cell as $n\cdot p_i$.  Make sure they are all greater than 5 to proceed.
-
-- Calculate the $\chi^2$ statistic: $\chi^2 = \sum{\frac{(observed - expected)^2}{expected}}$
-
-- Compute the p-value as the area in the tail above the $\chi^2$ statistic, for a $\chi^2$ distribution with   $df = (\text{number of categories - 1})$.
-
-- Interpret the p-value in context.
-]
-
----
-
-class: middle
-
-# Mendel’s Pea Experiment
-
-.bq[
-Between 1856 and 1863 Gregor Mendel cultivated and tested roughly 29,000 pea plants. This study showed that one in four pea plants was pure-bred recessive, two out of four were hybrid and one out of four were pure-bred dominant. 
-
-Mendel's work was rejected at first and was not widely accepted until after he died. He is now known as the “father of modern genetics
-]
-.footnote[Source: Mendel, Gregor. (1866). Versuche ber Pflanzen-Hybriden. Verh. Naturforsch. Ver. Brünn 4: 3–47 (in English in 1901, Experiments in Plant Hybridization, J. R. Hortic. Soc. 26: 1–32)]
-
----
-
-# Mendel’s Pea Experiment
-
-.pull-left-40[
-<br>
-<center>
-<img src="images/pea.jpg" width="99%" height="75%"><br>
-</center>
-
-]
-
-.pull-right-60[
-
-.hljs[
-S, Y: .bold[Dominant] and s, y: .bold[Recessive]
-
-Mate SSYY with ssyy: 1st Generation: all Ss Yy
-]
-
-.hljs.github[
-Mate 1st Generation: $\rightarrow$ 2nd Generation
-
-Phenotype | Theoretical Proportion
-----| ---- 
-Round, Yellow | 9/16 
-Round, Green | 3/16
-Wrinkled, Yellow | 3/16
-Wrinkled, Green | 1/16
-]
-]
-
----
-
-# Mendel’s Pea Experiment
-.hljs[ 
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
-<br>
-
-.bql[
-Let’s test this data against the null hypothesis of each $p_i$ equal to the theoretical value, based on genetics
-
-$$H_{0}: p_{1}=9 / 16, p_{2}=3 / 16, p_{3}=3 / 16, p_{4}=1 / 16$$
-$$H_{a} : \text{ At least one } p_{i} \text{ is not as specified in } H_{0}$$
-]
-
----
-
-# Mendel’s Pea Experiment
-
-.pull-left[
-.hljs[
-What is the expected count for round green peas?
-
-A. 0.182
-
-B. 108
-
-C. 104.25
-
-D. 139
-]
-
-<br>
-<details>
-<summary>.red[Click for answer]</summary>
-.hljs[The correct answer is C. Since (315 + 101 + 108 + 32)* 3/16 = 104.25]
-</details>
-
-]
-
 .pull-right[
-.hljs[
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
+```{r}
+ggplot(tuition, aes(sample = Diff)) +
+  stat_qq() +
+  stat_qq_line()+
+  labs(title = "Q-Q Plot")
+```
 ]
 
 ---
 
-# Mendel’s Pea Experiment
+## Tuition example
 
 
-.pull-left[
-<br>
-.hljs[
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
-]
-.pull-right[
-.hljs.font90[
-The $\chi$^2 statistic is the sum of 4 components (because there are 4 categories).  What is the contribution to the $\chi$^2 statistic from the “Round, Yellow” category?
 
-1. 0.016
+```{r, collapse=TRUE}
+t.test(tuition$Diff)
+```
 
-2. 1.05
+```{r, collapse=TRUE}
+sd(tuition$Diff)/sqrt(19)  # SE for mean diff
+```
 
-3. 5.21
+.bq.font90[
 
-4. 107.2
-]
-
-<details>
-<summary>.red[Click for answer]</summary>
-.hljs[The correct answer is A. Since $\frac{(315 - 312.75)^2}{312.75}  = 0.016$]
-</details>
+We are 95% confident that the mean tuition for non-residents is `r paste0("$", 2585)` to `r paste0("$", 4584)` higher than mean tuition for residents
 
 ]
-
----
-
-# Mendel’s Pea Experiment: $\chi^{2}=0.47$
-
-.bql.font80[Two options:
-- Simulate a randomization distribution
-- Compare to a $\chi^{2}$ distribution with $df = 4-1$
-]
-
-.pull-left[
-<center>
-<img src="images/pea_rand1.png" width="99%" height="75%"><br>
-</center>
-]
-.pull-right[
-<center>
-<img src="images/pea_rand2.png" width="85%" height="75%"><br>
-</center>
-]
-
----
-
-# Mendel’s Pea Experiment
-
-.bq[
-Does this prove Mendel’s theory of genetics?  Or at least prove that his theoretical proportions for pea phenotypes were correct?
-
-1. Yes
-2. No
-]
-
-<br>
-
-<details>
-<summary>.red[Click for answer]</summary>
-.hljs[The correct answer is No. The .out-t[p-value = 0.925]. The test is inconclusive, so this does not prove Mendel's theory of genetics or his theoretical proportions for pea phenotypes.]
-</details>
-
 
 ---
 
@@ -563,13 +409,12 @@ class: action
 .pull-right-60[
 
 <br>
-<br>
-
-.bq[
-- Go over to the in class activity file
-- Complete the activity as much as possible
+.bql[
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
 ]
 ]
 
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 15, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
