--- a/public/stat120/Day1.Rmd
+++ b/public/stat120/Day1.Rmd
@@ -402,7 +402,7 @@ class: action, middle
 <br>
 .bq.font90[
 - Make a course folder called 'stat120' either on your [Maize](https://maize.mathcs.carleton.edu/auth-sign-in?appUri=%2F) account or on your local computer 
-- Please download the Class-Activity-1 template from [moodle](https://moodle.carleton.edu/course/view.php?id=42303) and go to [class helper web page](https://stat120-fall23.netlify.app/) 
+- Please download the Class-Activity-1 template from [moodle](https://moodle.carleton.edu/course/view.php?id=43041) and go to [class helper web page](https://stat120-winter24.netlify.app/) 
 - Let's do this together and have fun. 
 ]
 
